--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,51 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
 asgiref==3.8.1
+attrs==24.2.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+deprecation==2.1.0
 Django==5.1.1
+django-cors-headers==4.5.0
 django-environ==0.11.2
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+frozenlist==1.4.1
+google-auth==2.35.0
+gotrue==2.9.2
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.6
+httpx==0.27.2
+hyperframe==6.0.1
+idna==3.10
+multidict==6.1.0
+packaging==24.1
+postgrest==0.17.1
+propcache==0.2.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
+realtime==2.0.5
+requests==2.32.3
+rsa==4.9
+six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.1
+storage3==0.8.1
+StrEnum==0.4.15
+supabase==2.9.0
+supafunc==0.6.1
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
+websockets==13.1
+yarl==1.15.2
